Version: 1.4.2
Date: ????
  Changes:
    - Moved ducts to a dedicated item subgroup. (#32)
    - Updated lighting on sprites to blend in better with other Factorio entities. (#36)
    - Updated technology icon. (#36)
  Bugfixes:
    - Fixed that duct and long duct items were visible in remote view when auto-join was disabled. (#34)
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2024-12-05
  Bugfixes:
    - Fixed an error when disabling the duct auto-join setting. (#29)
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2024-10-30
  Features:
    - Ducts have a max pipeline extent of 1 kilometer.
  Changes:
    - Updated to Factorio 2.0.
    - Updated several internal names to match the display names.
  Balancing:
    - Reduced duct volume by 4x.
    - Reduced pumping speeds by 10x.
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2023-05-09
  Bugfixes:
    - Fixed end points simulation blueprint corruption
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2023-05-09
  Bugfixes:
    - Fixed messy duct collision boxes causing buildability issues (#14)
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2023-05-08
  Bugfixes:
    - Fixed that underground pipes could connect to ducts in certain situations (#13)
    - Fixed that underground ducts would not connect if regular ducts were placed between them (#6)
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2023-04-29
  Changes:
    - Removed blue fluidbox arrows from ducts (#11)
---------------------------------------------------------------------------------------------------
Version: 1.3.1